syntax = "proto3";

package aspb;

import "aspb/anime_season.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/aspb";

message QueryAnimeSeasonRequest {
    string query = 1;
}

message QueryAnimeSeasonResponse {
    repeated AnimeSeasonResponse animeSeasons = 1;
}